Fix dans Talus_TPL::parse()
Il y a avait une possibilité d'erreur lors du parsage de plusieurs tpls d'un coup en multi-paramétrage

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Version 1.8.0 (à priori) gelée. En attente de tests plus poussés avant une release officielle.
+Version 1.8.0 gelée et prête à être distribuée.
