--- a/README
+++ b/README
@@ -1,7 +1,13 @@
 Important Tags :
+  -> 1.9.0    : 891156118765c8e9996be69a41fd4a8d11b7f517
   -> 1.8.0.1  : 4323d7e40728b4a626f3da151902df50f0a841d7
   -> 1.8.0    : 982fd61826653d8a4cb1605b0854913523d609df
   -> 1.7.0    : 1218f0e88e2d60b0287df00ffd6afdcf3e298fe2
 
 Branches :
-  -> Master : Lastest commit
+  -> Master : Lastest
+
+Other Stuff :
+  For any pieces of documentation, check the official site (Talus' TPL > Documentation).
+  It is still in french though ; the english version will "one day" be made
+  (please don't ask when :D).
