--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@
     #CHG : Broke the Parser interface for the handling of parameters
 
     #ADD : Possibility to call methods without args on templates vars
+    #ADD : Extensions
     #ADD : Variable class to manage variables in a template
 
     #OBS : Binding global variables by reference
