--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,8 @@
     #CHG : Now adopting PSR-1 & PSR-2 standards (minus some things)
     #CHG : Broke the Parser interface for the handling of parameters
 
+    #ADD : Variable class to manage variables in a template
+
 ## 1.12 ==> 1.13 (Release: 11/05/12)
     #WAR : COMPATIBILITY BROKEN
     #WAR : PHP 5.2.1 is now needed
