--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,9 +14,9 @@
     #CHG : The String loader is now the one used by default
     #CHG : Moved the constants from Link_Parser to its interface
     #CHG : Now adopting PSR-1 & PSR-2 standards (minus some things)
-    #CHG : (BC BREAK) Filters can not be applied on objects anymore
     #CHG : Broke the Parser interface for the handling of parameters
 
+    #ADD : Possibility to call methods without args on templates vars
     #ADD : Variable class to manage variables in a template
 
     #OBS : Binding global variables by reference
