Refactor the options handling in the environment
Clean up some unused properties too

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,7 @@
  * @version $Id: c943b372181f3da5098c6407ab268d68ca7b4b87 $
  */
 
-## 1.13 ==> 1.? (Release: ??/??/??)
+## 1.13 ==> 1.? (Release: ??/??/13)
     #WAR : PHP 5.2.3 is needed, btw.
 
     #ADD : Possibility to call methods without args on templates vars
@@ -18,6 +18,7 @@
     #ADD : Extensions
 
     #CHG : The String loader is now the one used by default
+    #CHG : Options management in the environment (BC Break)
     #CHG : Moved the constants from Link_Parser to its interface
     #CHG : Now adopting PSR-1 & PSR-2 standards (minus some things)
     #CHG : Broke the Parser interface for the handling of parameters
